--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=Party
+server.port=8080
+
+## Database
+spring.datasource.url=jdbc:postgresql://localhost:5432/
+spring.datasource.username=user
+spring.datasource.password=password
