--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ server.port=8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/
 spring.datasource.username=user
 spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=none
