ajout du profil et gestion du json...

--- a/src/main/resources/spy.properties
+++ b/src/main/resources/spy.properties
@@ -1,5 +1,5 @@
-#appender=com.p6spy.engine.spy.appender.FileLogger
-appender=com.p6spy.engine.spy.appender.StdoutLogger
+appender=com.p6spy.engine.spy.appender.FileLogger
+#appender=com.p6spy.engine.spy.appender.StdoutLogger
 logfile=database.log
 append=true
 logMessageFormat=com.p6spy.engine.spy.appender.CustomLineFormat
